# Loti

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  image.h  main.cpp
dta/: bib1.csv  bibSpatiale.bib  biliotheque2.bib  defaut.bib  descripteurs.csv  new.bib  new_bib.bib  utilisateurs.txt
gui/: FenetrePrincipale.h  test
gui/trames/: AspectRatioPixmapLabel.h  QRangeSlider.cpp  RescalingPixmapLabel.h  TrameApplication.h  TrameAuthentification.h  TrameCentrale.h  TrameDroite.h  TrameGauche.h  TrameSuperieure.h
src/: biblio.cpp  biblio.h  image.cpp  image.h  main.cpp  utilisateur.cpp  utilisateur.h
